# cinder

./: CMakeLists.txt
src/: application.cpp  application.hpp  camera.cpp  camera.hpp  cinder.hpp  gpu_context.cpp  gpu_context.hpp  slot_map.hpp  window.cpp  window.hpp
src/multithreading/: thread_pool.cpp  thread_pool.hpp
src/rendering/: misc.hpp  renderer.cpp  renderer.hpp  renderer_shared.inl
src/rendering/tasks/: basic_raytracing.hlsl  basic_raytracing.inl
src/scene/: asset_processor.cpp  asset_processor.hpp  scene.cpp  scene.hpp
src/shader_shared/: geometry.inl  shared.inl
